# web-crawler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.bat  test_poll_timeout.py
.claude/: settings.json  settings.local.json
.github/workflows/: build-deploy.yml  nightly-smoke.yml
app/: config.py  main.py
app/agents/: __init__.py  output_agent.py  parser_agent.py  planner_agent.py  router_agent.py  scraper_agent.py
app/utils/: llm.py  (+17 more)
deploy/: .env.example  azure-deploy.sh
docs/: AUTOMATION_PIPELINE.md  DEPLOYMENT.md  Evaluation.md  POSTMORTEM_TEMPLATE.md  Pipeline Overview.docx  Pipeline Overview.md  RELIABILITY_RUNBOOK.md  SCRAPING_LOGIC.md  SCRAPING_METHODS_A_B_C.md  Setup Guide.docx  Setup Guide.md
frontend/: inject-api-url.js  package.json  vercel.json
scrapers/: dispatcher.py  run_dispatcher.bat
scripts/: compare_smoke_reports.py  enrich_modefabriek.py  scrape_iaw.py  scrape_modefabriek.py  smoke_issue_payload.py  smoke_sites.py  smoke_trend_markdown.py
temp/: extraction_cache.db
test/: conftest.py  test_api_routes.py  test_browser.py  test_fingerprint.py  test_html_utils.py  test_http.py  test_integration.py  test_job_store.py  test_orchestrator_reliability.py  test_parser.py  test_plan_cache.py  test_planner_contract.py  test_quality.py  test_rate_limiter.py  test_schemas.py  test_scraper_extraction.py  test_sitemap.py  test_smoke_issue_payload.py  test_smoke_report_compare.py  test_smoke_sites_contract.py  test_smoke_trend_markdown.py  test_structured_data.py  test_templates.py
(+122 files in other folders)
